Fixed bug with button groups article margin spacing when site is resized for small screens.

--- a/src/styles/css/buttons.css
+++ b/src/styles/css/buttons.css
@@ -82,4 +82,9 @@ ul.cfa-container--grouped>div {
   .cfa-container {
     flex-direction: column;
   }
+
+  .cfa-container li,
+  .cfa-container--grouped>div>li {
+    margin: 8px 0 !important;
+  }
 }
